[tool.poetry]
name = "xorshifter"
version = "0.1.0"
description = ""
authors = ["HtheChemist <h.marceau@phytochemia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
